sassi-macros/tests/lihaaf/compile_fail/cacheable_duplicate_watermark_field.stderr
error: Cacheable: duplicate `watermark_field` option
 --> $DIR/cacheable_duplicate_watermark_field.rs:6:45
  |
6 | #[cacheable(watermark_field = "updated_at", watermark_field = "version")]
  |                                             ^^^^^^^^^^^^^^^

error: aborting due to 1 previous error
